# bahahahah

./: layer10-plan.md
layer10-takehome/: .docker_status.txt  .env.example  .gitignore  .pg_check.txt  .psql_check.txt  Makefile  README.md  __init__.py  config.py  docker-compose.yml  logging_config.py  pipeline.py  pyproject.toml  requirements.txt
layer10-takehome/dedup/: __init__.py  claim_dedup.py  entity_resolver.py  merge_audit.py
layer10-takehome/docs/: architecture_report.md  architecture_report.tex  writeup.md
layer10-takehome/docs/screenshots/: README.md
layer10-takehome/extraction/: __init__.py  extractor.py  prompts.py  schema.py  validator.py  versioning.py
layer10-takehome/ingestion/: __init__.py  dedup_emails.py  parse_enron.py  signal_filter.py  thread_builder.py
layer10-takehome/notebooks/: layer10_pipeline.ipynb
layer10-takehome/retrieval/: __init__.py  api.py  context_pack.py  linker.py  traversal.py
layer10-takehome/scripts/: export_graph.py  generate_examples.py  run_pipeline.py  seed_test_data.sql  test_llm_extraction.py
layer10-takehome/storage/: __init__.py  db.py  embeddings.py  schema.sql
layer10-takehome/tests/: __init__.py  test_dedup.py  test_extraction.py  test_ingestion.py
layer10-takehome/visualization/: __init__.py
layer10-takehome/webui/: package-lock.json  package.json
layer10-takehome/webui/src/: App.css  App.tsx  api.ts  colors.ts  index.css
layer10-takehome/webui/src/components/: EvidencePanel.tsx  GraphView.tsx  MergeInspector.tsx  TimelinePanel.tsx
